# Color-Restoration

./: .gitattributes  .gitignore  README.md  docker-compose.yml  render.yaml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py  routes_colorize.py  routes_health.py
backend/app/application/services/: colorize_service.py
backend/app/core/: config.py  paths.py
backend/app/domain/: interfaces.py
backend/app/domain/entities/: colorization_result.py
backend/app/infrastructure/inference/: keras_colorization_adapter.py
backend/app/schemas/: health.py
backend/docker/: download_model.py  entrypoint.sh
backend/scripts/: prepare_dataset.py  run_backend.ps1  smoke_test_inference.py
backend/tests/: test_health.py  test_paths.py
backend/train/: train_baseline.py
frontend/: .dockerignore  .env.example  Dockerfile  package.json  vercel.json
frontend/app/: layout.tsx  page.tsx
frontend/app/api/colorize/: route.ts
frontend/app/components/: ColorizePanel.tsx
